DAMG: Cambios en el index para que cuadre con lo que quiere Valderrama

--- a/front-identificador-digitos/public/index.html
+++ b/front-identificador-digitos/public/index.html
@@ -16,5 +16,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Integrantes: 
+      Figueroa Bracamontes Luis Alfredo 
+      2021630266 
+      Muñoz gonzález Daniel Aurelio 
+      2021630807 
+      Rolón Cárdenas Roberto
+      2021630589 
+      Grupo: 5CM5
+      Tarea: Tarea 1 Login
+    -->
   </body>
 </html>
